--- a/kelas-5/lembah/lembah.html
+++ b/kelas-5/lembah/lembah.html
@@ -150,7 +150,7 @@
   <img src="https://i.imgur.com/oDj5njL.png" alt="Ikon ANBK" class="icon"
        onerror="this.replaceWith(Object.assign(document.createElement('span'),{textContent:'🖥️'}));">
   <span class="label">ANBK</span>
-<a href="perkalian.html" class="map-item" aria-label="Perkalian">
+<a href="perkalian_mode.html" class="map-item" aria-label="Perkalian">
   <img src="hhttps://i.imgur.com/ILJFlUm.jpeg" alt="Ikon Perkalian" class="icon"
        onerror="this.replaceWith(Object.assign(document.createElement('span'),{textContent:'🖥️'}));">
   <span class="label">Perkalian</span>
