--- a/kelas-5/lembah/perkalian_mode.html
+++ b/kelas-5/lembah/perkalian_mode.html
@@ -125,7 +125,7 @@ h1{
         Belajar perkalian dengan tampilan
         lingkar hitung yang interaktif dan visual.
       </p>
-      <a href="lingkarhitung.html" class="btn mode2">
+      <a href="Lingkar Hitung.html" class="btn mode2">
         ▶ Mulai Mode 2
       </a>
     </div>
@@ -139,3 +139,4 @@ h1{
 
 </body>
 </html>
+
