--- a/kelas-5/tugas/bhs_indo/tugas_bhs_indo_100226.html
+++ b/kelas-5/tugas/bhs_indo/tugas_bhs_indo_100226.html
@@ -1,1 +1,271 @@
+<!DOCTYPE html> 
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tugas Bahasa Indonesia</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      height: 100%;
+      width: 100%;
+      overflow-x: hidden;
+      background: url('https://i.imgur.com/ZhICw8Q.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
+    }
+
+    nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+    }
+
+    .nav-left img {
+      height: 45px;
+      margin-right: 0.5rem;
+    }
+
+    .nav-right a {
+      background: rgba(255,255,255,0.9);
+      padding: 0.4rem 0.8rem;
+      border-radius: 6px;
+      text-decoration: none;
+      color: #0288d1;
+      font-weight: bold;
+      font-size: 0.9rem;
+    }
+
+    .title-section {
+      text-align: center;
+      margin: 20px 15px 10px;
+    }
+
+    .title-section h1 {
+      font-size: 2rem;
+      background: rgba(255,255,255,0.85);
+      padding: 0.5rem 1rem;
+      border-radius: 12px;
+      color: #0288d1;
+      display: inline-block;
+    }
+
+    .task-container {
+      display: flex;
+      justify-content: center;
+      margin: 30px auto;
+    }
+
+    .dropdown {
+      position: relative;
+    }
+
+    .dropbtn {
+      background: rgba(255,255,255,0.9);
+      border-radius: 12px;
+      padding: 20px;
+      font-weight: bold;
+      font-size: 1.1rem;
+      cursor: pointer;
+      color: #0288d1;
+      border: none;
+      width: 250px;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background: rgba(255,255,255,0.95);
+      border-radius: 8px;
+      min-width: 230px;
+      margin-top: 5px;
+      box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+    }
+
+    .dropdown-content a {
+      display: block;
+      padding: 10px;
+      text-decoration: none;
+      color: #0288d1;
+      font-weight: bold;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .dropdown.show .dropdown-content {
+      display: block;
+    }
+
+    .popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255,255,255,0.95);
+      padding: 20px 30px;
+      border-radius: 14px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      font-weight: bold;
+      color: #0288d1;
+      text-align: center;
+      z-index: 1000;
+    }
+
+    .popup.show {
+      display: block;
+      animation: fadeIn 0.4s ease;
+    }
+
+    @keyframes fadeIn {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    .calendar-overlay {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.45);
+      z-index: 999;
+    }
+
+    .calendar-popup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: linear-gradient(135deg, #e1f5fe, #ffffff);
+      padding: 25px 30px;
+      border-radius: 20px;
+      text-align: center;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.35);
+      z-index: 1000;
+      animation: pop 0.4s ease;
+    }
+
+    .calendar-popup h2 {
+      margin: 0 0 10px;
+      color: #0288d1;
+    }
+
+    .calendar-popup p {
+      margin: 0 0 15px;
+      font-size: 0.95rem;
+    }
+
+    .calendar-popup input {
+      padding: 10px;
+      font-size: 1.1rem;
+      border-radius: 10px;
+      border: 2px solid #0288d1;
+      cursor: pointer;
+    }
+
+    @keyframes pop {
+      from {transform: translate(-50%, -50%) scale(0.6); opacity: 0;}
+      to {transform: translate(-50%, -50%) scale(1); opacity: 1;}
+    }
+  </style>
+</head>
+
+<body>
+
+<nav>
+  <div class="nav-left">
+    <img src="https://i.imgur.com/sxm7RR1.png">
+    <img src="https://i.imgur.com/tGA5UBc.png" style="height:50px;">
+    <img src="https://i.imgur.com/oWB8vKW.png">
+  </div>
+  <div class="nav-right">
+    <a href="../../index.html">🏠 Beranda</a>
+    <a href="tugas.html">◀️ Kembali</a>
+    <a href="#">🖼️ Galeri</a>
+  </div>
+</nav>
+
+<div class="title-section">
+  <h1>📚 Tugas Bahasa Indonesia</h1>
+</div>
+
+<div class="task-container">
+  <div class="dropdown">
+    <button class="dropbtn">📅 Pilih Tugas</button>
+    <div class="dropdown-content">
+      <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">Rabu, 12 November 2025</a>
+      <a href="bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html">Selasa, 25 November 2025</a>
+      <a href="#" id="tugasLain">📆 Pilih Tanggal Lain</a>
+    </div>
+  </div>
+</div>
+
+<div id="popupMessage" class="popup">
+  😄📚 Wah! Soalnya masih disiapkan yaa!<br>Semangat belajarnya! 🌟
+</div>
+
+<div class="calendar-overlay" id="calendarOverlay"></div>
+
+<div class="calendar-popup" id="calendarPopup">
+  <h2>📅 Pilih Tanggal</h2>
+  <p>Ayo tentukan tanggal tugasmu! 💪✨</p>
+  <input type="date" id="calendarInput">
+</div>
+
+<script>
+  const dropdown = document.querySelector(".dropdown");
+  const dropbtn = document.querySelector(".dropbtn");
+  const popup = document.getElementById("popupMessage");
+  const tugasLain = document.getElementById("tugasLain");
+
+  const overlay = document.getElementById("calendarOverlay");
+  const calendarPopup = document.getElementById("calendarPopup");
+  const calendarInput = document.getElementById("calendarInput");
+
+  dropbtn.onclick = e => {
+    e.stopPropagation();
+    dropdown.classList.toggle("show");
+  };
+
+  window.onclick = () => dropdown.classList.remove("show");
+
+  tugasLain.onclick = e => {
+    e.preventDefault();
+    overlay.style.display = "block";
+    calendarPopup.style.display = "block";
+  };
+
+  overlay.onclick = () => {
+    overlay.style.display = "none";
+    calendarPopup.style.display = "none";
+  };
+
+  const soalByTanggal = {
+    "2025-11-12": "Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html",
+    "2025-11-25": "bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html",
+
+    "2026-02-10": "https://nurchintapembatik.my.canva.site/bahasa-indoensia-teks-eksplanasi",
+    "2026-02-12": "/kelas-5/tugas/bhs_indo/tugas_bhs_indo_120226.html"
+  };
+
+  calendarInput.onchange = function () {
+    const tgl = this.value;
+    overlay.style.display = "none";
+    calendarPopup.style.display = "none";
+
+    if (soalByTanggal[tgl]) {
+      window.location.href = soalByTanggal[tgl];
+    } else {
+      popup.classList.add("show");
+      setTimeout(() => popup.classList.remove("show"), 2300);
+    }
+  };
+</script>
+
+</body>
+</html>
 
