--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -140,7 +140,6 @@
       cursor: pointer;
     }
 
-    /* ===== PESAN MELAYANG ===== */
     .pesan-melayang {
       display: none;
       position: fixed;
@@ -154,12 +153,6 @@
       font-weight: bold;
       box-shadow: 0 10px 25px rgba(0,0,0,0.35);
       z-index: 2000;
-      animation: pop 0.4s ease;
-    }
-
-    @keyframes pop {
-      from { transform: translate(-50%, -60%) scale(0.8); opacity: 0; }
-      to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
     }
   </style>
 </head>
@@ -202,41 +195,13 @@
   <input type="date" id="calendarInput">
 </div>
 
-<div class="pesan-melayang" id="pesanMelayang">
-  😄 Belum ada tugas di tanggal ini ya!  
-  <br>Yuk cek tanggal lainnya ✨📅
-</div>
+<div class="pesan-melayang" id="pesanMelayang"></div>
 
 <script>
-  const dropdown = document.querySelector(".dropdown");
-  const dropbtn = document.querySelector(".dropbtn");
-  const tugasLain = document.getElementById("tugasLain");
-
   const overlay = document.getElementById("calendarOverlay");
   const calendarPopup = document.getElementById("calendarPopup");
   const calendarInput = document.getElementById("calendarInput");
   const pesan = document.getElementById("pesanMelayang");
-
-  dropbtn.onclick = e => {
-    e.stopPropagation();
-    dropdown.classList.toggle("show");
-  };
-
-  window.onclick = () => dropdown.classList.remove("show");
-
-  tugasLain.onclick = e => {
-    e.preventDefault();
-    overlay.style.display = "block";
-    calendarPopup.style.display = "block";
-  };
-
-  overlay.onclick = () => {
-    overlay.style.display = "none";
-    calendarPopup.style.display = "none";
-    pesan.style.display = "none";
-  };
-
-  pesan.onclick = () => pesan.style.display = "none";
 
   const soalByTanggal = {
     "2025-11-12": "Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html",
@@ -245,7 +210,7 @@
 
   const soalWaktuKhusus = {
     tanggal: "2026-02-08",
-    waktu: "16:15",
+    waktu: "16:17",
     link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
   };
 
@@ -270,8 +235,23 @@
       return;
     }
 
+    let daftarTugas = Object.keys(soalByTanggal)
+      .concat(soalWaktuKhusus.tanggal)
+      .sort()
+      .filter(t => t >= tglDipilih);
+
+    pesan.innerHTML = `
+      😄 Belum ada tugas di tanggal ini<br><br>
+      📌 <u>Tugas tersedia:</u><br>
+      ${daftarTugas.map(t => "📅 " + t).join("<br>")}
+      <br><br>✨ Yuk cek tanggal tersebut!
+    `;
+
     pesan.style.display = "block";
   };
+
+  overlay.onclick = () => pesan.style.display = "none";
+  pesan.onclick = () => pesan.style.display = "none";
 </script>
 
 </body>
