--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -198,10 +198,35 @@
 <div class="pesan-melayang" id="pesanMelayang"></div>
 
 <script>
+  const dropdown = document.querySelector(".dropdown");
+  const dropbtn = document.querySelector(".dropbtn");
+  const tugasLain = document.getElementById("tugasLain");
+
   const overlay = document.getElementById("calendarOverlay");
   const calendarPopup = document.getElementById("calendarPopup");
   const calendarInput = document.getElementById("calendarInput");
   const pesan = document.getElementById("pesanMelayang");
+
+  dropbtn.onclick = e => {
+    e.stopPropagation();
+    dropdown.classList.toggle("show");
+  };
+
+  window.onclick = () => dropdown.classList.remove("show");
+
+  tugasLain.onclick = e => {
+    e.preventDefault();
+    overlay.style.display = "block";
+    calendarPopup.style.display = "block";
+  };
+
+  overlay.onclick = () => {
+    overlay.style.display = "none";
+    calendarPopup.style.display = "none";
+    pesan.style.display = "none";
+  };
+
+  pesan.onclick = () => pesan.style.display = "none";
 
   const soalByTanggal = {
     "2025-11-12": "Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html",
@@ -210,7 +235,7 @@
 
   const soalWaktuKhusus = {
     tanggal: "2026-02-08",
-    waktu: "16:17",
+    waktu: "16:15",
     link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
   };
 
@@ -235,7 +260,7 @@
       return;
     }
 
-    let daftarTugas = Object.keys(soalByTanggal)
+    const daftarTugas = Object.keys(soalByTanggal)
       .concat(soalWaktuKhusus.tanggal)
       .sort()
       .filter(t => t >= tglDipilih);
@@ -249,9 +274,6 @@
 
     pesan.style.display = "block";
   };
-
-  overlay.onclick = () => pesan.style.display = "none";
-  pesan.onclick = () => pesan.style.display = "none";
 </script>
 
 </body>
