--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -74,17 +74,21 @@
       cursor: pointer;
       color: #0288d1;
       border: none;
-      width: 250px;
+      width: 260px;
     }
 
+    /* ===== DROPDOWN DENGAN BATAS 3 TUGAS ===== */
     .dropdown-content {
       display: none;
       position: absolute;
       background: rgba(255,255,255,0.95);
-      border-radius: 8px;
-      min-width: 230px;
-      margin-top: 5px;
+      border-radius: 10px;
+      min-width: 260px;
+      margin-top: 6px;
       box-shadow: 0 6px 12px rgba(0,0,0,0.25);
+
+      max-height: 195px;          /* ± 3 tugas */
+      overflow-y: auto;           /* geser jika lebih */
     }
 
     .dropdown-content a {
@@ -94,6 +98,15 @@
       color: #0288d1;
       font-weight: bold;
       border-bottom: 1px solid #ddd;
+      font-size: 0.95rem;
+    }
+
+    .dropdown-content a span {
+      display: block;
+      font-size: 0.8rem;
+      font-weight: normal;
+      color: #555;
+      margin-top: 3px;
     }
 
     .dropdown.show .dropdown-content {
@@ -153,6 +166,12 @@
       font-weight: bold;
       box-shadow: 0 10px 25px rgba(0,0,0,0.35);
       z-index: 2000;
+      animation: pop 0.4s ease;
+    }
+
+    @keyframes pop {
+      from { transform: translate(-50%, -60%) scale(0.8); opacity: 0; }
+      to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
     }
   </style>
 </head>
@@ -180,9 +199,24 @@
   <div class="dropdown">
     <button class="dropbtn">📅 Pilih Tugas</button>
     <div class="dropdown-content">
-      <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">Rabu, 12 November 2025</a>
-      <a href="bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html">Selasa, 25 November 2025</a>
+
+      <a href="Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html">
+        Rabu, 12 November 2025
+        <span>⏰ 08.00 WIB</span>
+      </a>
+
+      <a href="bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html">
+        Selasa, 25 November 2025
+        <span>⏰ 08.00 WIB</span>
+      </a>
+
+      <a href="#" id="tugasKhusus">
+        Minggu, 8 Februari 2026
+        <span>⏰ 16.15 WIB</span>
+      </a>
+
       <a href="#" id="tugasLain">📆 Pilih Tanggal Lain</a>
+
     </div>
   </div>
 </div>
@@ -195,12 +229,16 @@
   <input type="date" id="calendarInput">
 </div>
 
-<div class="pesan-melayang" id="pesanMelayang"></div>
+<div class="pesan-melayang" id="pesanMelayang">
+  😄 Belum ada tugas di tanggal ini ya!  
+  <br>Yuk cek tanggal lainnya ✨📅
+</div>
 
 <script>
   const dropdown = document.querySelector(".dropdown");
   const dropbtn = document.querySelector(".dropbtn");
   const tugasLain = document.getElementById("tugasLain");
+  const tugasKhusus = document.getElementById("tugasKhusus");
 
   const overlay = document.getElementById("calendarOverlay");
   const calendarPopup = document.getElementById("calendarPopup");
@@ -220,6 +258,24 @@
     calendarPopup.style.display = "block";
   };
 
+  const soalWaktuKhusus = {
+    tanggal: "2026-02-08",
+    waktu: "16:15",
+    link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
+  };
+
+  tugasKhusus.onclick = e => {
+    e.preventDefault();
+    const sekarang = new Date();
+    const waktuAktif = new Date(soalWaktuKhusus.tanggal + "T" + soalWaktuKhusus.waktu + ":00");
+
+    if (sekarang >= waktuAktif) {
+      window.location.href = soalWaktuKhusus.link;
+    } else {
+      pesan.style.display = "block";
+    }
+  };
+
   overlay.onclick = () => {
     overlay.style.display = "none";
     calendarPopup.style.display = "none";
@@ -227,53 +283,6 @@
   };
 
   pesan.onclick = () => pesan.style.display = "none";
-
-  const soalByTanggal = {
-    "2025-11-12": "Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html",
-    "2025-11-25": "bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html"
-  };
-
-  const soalWaktuKhusus = {
-    tanggal: "2026-02-08",
-    waktu: "16:15",
-    link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
-  };
-
-  calendarInput.onchange = function () {
-    overlay.style.display = "none";
-    calendarPopup.style.display = "none";
-
-    const sekarang = new Date();
-    const tglDipilih = this.value;
-
-    const waktuAktif = new Date(
-      soalWaktuKhusus.tanggal + "T" + soalWaktuKhusus.waktu + ":00"
-    );
-
-    if (tglDipilih === soalWaktuKhusus.tanggal && sekarang >= waktuAktif) {
-      window.location.href = soalWaktuKhusus.link;
-      return;
-    }
-
-    if (soalByTanggal[tglDipilih]) {
-      window.location.href = soalByTanggal[tglDipilih];
-      return;
-    }
-
-    const daftarTugas = Object.keys(soalByTanggal)
-      .concat(soalWaktuKhusus.tanggal)
-      .sort()
-      .filter(t => t >= tglDipilih);
-
-    pesan.innerHTML = `
-      😄 Belum ada tugas di tanggal ini<br><br>
-      📌 <u>Tugas tersedia:</u><br>
-      ${daftarTugas.map(t => "📅 " + t).join("<br>")}
-      <br><br>✨ Yuk cek tanggal tersebut!
-    `;
-
-    pesan.style.display = "block";
-  };
 </script>
 
 </body>
