--- a/kelas-5/tugas/tugas-bIndo.html
+++ b/kelas-5/tugas/tugas-bIndo.html
@@ -61,9 +61,7 @@
       margin: 30px auto;
     }
 
-    .dropdown {
-      position: relative;
-    }
+    .dropdown { position: relative; }
 
     .dropbtn {
       background: rgba(255,255,255,0.9);
@@ -96,9 +94,7 @@
       border-bottom: 1px solid #ddd;
     }
 
-    .dropdown.show .dropdown-content {
-      display: block;
-    }
+    .dropdown.show .dropdown-content { display: block; }
 
     .calendar-overlay {
       display: none;
@@ -122,16 +118,6 @@
       z-index: 1000;
     }
 
-    .calendar-popup h2 {
-      margin: 0 0 10px;
-      color: #0288d1;
-    }
-
-    .calendar-popup p {
-      margin: 0 0 15px;
-      font-size: 0.95rem;
-    }
-
     .calendar-popup input {
       padding: 10px;
       font-size: 1.1rem;
@@ -147,18 +133,31 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background: linear-gradient(135deg, #fff176, #ffd54f);
-      padding: 25px 30px;
+      padding: 20px;
       border-radius: 18px;
       text-align: center;
       font-weight: bold;
       box-shadow: 0 10px 25px rgba(0,0,0,0.35);
       z-index: 2000;
-      animation: pop 0.4s ease;
+      max-width: 320px;
     }
 
-    @keyframes pop {
-      from { transform: translate(-50%, -60%) scale(0.8); opacity: 0; }
-      to { transform: translate(-50%, -50%) scale(1); opacity: 1; }
+    .daftar-tugas {
+      display: flex;
+      gap: 10px;
+      overflow-x: auto;
+      margin-top: 10px;
+      padding-bottom: 5px;
+    }
+
+    .item-tugas {
+      min-width: 180px;
+      background: #fff;
+      border-radius: 10px;
+      padding: 10px;
+      font-size: 0.85rem;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
   </style>
 </head>
@@ -197,79 +196,50 @@
 
 <div class="calendar-popup" id="calendarPopup">
   <h2>📅 Pilih Tanggal</h2>
-  <p>Ayo tentukan tanggal tugasmu! 💪✨</p>
   <input type="date" id="calendarInput">
 </div>
 
 <div class="pesan-melayang" id="pesanMelayang">
-  😄 Belum ada tugas di tanggal ini ya!  
-  <br>Yuk cek tanggal lainnya ✨📅
+  <div id="infoTugas"></div>
+  <div class="daftar-tugas" id="daftarTugas"></div>
 </div>
 
 <script>
-  const dropdown = document.querySelector(".dropdown");
-  const dropbtn = document.querySelector(".dropbtn");
-  const tugasLain = document.getElementById("tugasLain");
-
-  const overlay = document.getElementById("calendarOverlay");
-  const calendarPopup = document.getElementById("calendarPopup");
-  const calendarInput = document.getElementById("calendarInput");
-  const pesan = document.getElementById("pesanMelayang");
-
-  dropbtn.onclick = e => {
-    e.stopPropagation();
-    dropdown.classList.toggle("show");
-  };
-
-  window.onclick = () => dropdown.classList.remove("show");
-
-  tugasLain.onclick = e => {
-    e.preventDefault();
-    overlay.style.display = "block";
-    calendarPopup.style.display = "block";
-  };
-
-  overlay.onclick = () => {
-    overlay.style.display = "none";
-    calendarPopup.style.display = "none";
-    pesan.style.display = "none";
-  };
-
-  pesan.onclick = () => pesan.style.display = "none";
-
-  const soalByTanggal = {
-    "2025-11-12": "Soal_Bahasa_Indonesia_Kelas5_Imbuhan_TeksProsedur.html",
-    "2025-11-25": "bhs_indo/Selasa_25_Nov_25/Latihan_Soal_tugas_bahasa_indnesia.html"
-  };
-
-  const soalWaktuKhusus = {
-    tanggal: "2026-02-08",
-    waktu: "16:15",
-    link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi"
-  };
+  const kalenderTugas = [
+    { tanggal: "2026-02-06", waktu: "08:00", link: "#" },
+    { tanggal: "2026-02-08", waktu: "16:15", link: "https://nurchintapembatik.my.canva.site/bahasa-indonsia-teks-eksplanasi" },
+    { tanggal: "2026-02-10", waktu: "09:00", link: "#" },
+    { tanggal: "2026-02-12", waktu: "10:00", link: "#" }
+  ];
 
   calendarInput.onchange = function () {
-    overlay.style.display = "none";
-    calendarPopup.style.display = "none";
+    const tgl = new Date(this.value);
+    const bulan = tgl.getMonth();
+    const tahun = tgl.getFullYear();
 
-    const sekarang = new Date();
-    const tglDipilih = this.value;
+    const daftar = kalenderTugas.filter(t => {
+      const d = new Date(t.tanggal);
+      return d.getMonth() === bulan && d.getFullYear() === tahun;
+    });
 
-    const waktuAktif = new Date(
-      soalWaktuKhusus.tanggal + "T" + soalWaktuKhusus.waktu + ":00"
-    );
+    const info = document.getElementById("infoTugas");
+    const list = document.getElementById("daftarTugas");
+    list.innerHTML = "";
 
-    if (tglDipilih === soalWaktuKhusus.tanggal && sekarang >= waktuAktif) {
-      window.location.href = soalWaktuKhusus.link;
-      return;
+    if (daftar.length === 0) {
+      info.innerHTML = "😄 Belum ada tugas di bulan ini";
+    } else {
+      info.innerHTML = "📌 Tugas di bulan ini:";
+      daftar.slice(0, 10).forEach(t => {
+        const div = document.createElement("div");
+        div.className = "item-tugas";
+        div.innerHTML = `📅 ${t.tanggal}<br>⏰ ${t.waktu}`;
+        div.onclick = () => window.location.href = t.link;
+        list.appendChild(div);
+      });
     }
 
-    if (soalByTanggal[tglDipilih]) {
-      window.location.href = soalByTanggal[tglDipilih];
-      return;
-    }
-
-    pesan.style.display = "block";
+    document.getElementById("pesanMelayang").style.display = "block";
   };
 </script>
 
